added some components, buttons, created some states

--- a/src/components/Navbar/NavbarStyles.scss
+++ b/src/components/Navbar/NavbarStyles.scss
@@ -11,6 +11,9 @@ nav {
     display: flex;
     background-color: #f8a771;
     font-size: xx-large;
+    button {
+      font-size: medium;
+    }
     li {
       text-transform: uppercase;
     }
